--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "drupal/module_filter": "^3.2",
         "drupal/paragraphs": "^1.12",
         "drupal/pathauto": "^1.8",
-        "drush/drush": "^10.6"
+        "drush/drush": "^10.6",
+        "ext-json": "*"
     },
     "conflict": {
         "drupal/drupal": "*"
