--- a/web/modules/custom/music_search/modules/spotify_lookup/spotify_lookup.services.yml
+++ b/web/modules/custom/music_search/modules/spotify_lookup/spotify_lookup.services.yml
@@ -1,2 +1,3 @@
-spotify_lookup:
-  class: Drupal\spotify_lookup\SpotifyLookupService
+services:
+  spotify_lookup:
+    class: Drupal\spotify_lookup\SpotifyLookupService
