--- a/web/modules/custom/music_search/music_search.info.yml
+++ b/web/modules/custom/music_search/music_search.info.yml
@@ -5,4 +5,5 @@ core_version_requirement: ^9 || ^10
 package: Custom
 dependencies:
   - drupal:system (>= 9.1)
+  - spotify_lookup
 configure: music_search.settings
