--- a/web/modules/custom/music_search/modules/spotify_lookup/spotify_lookup.info.yml
+++ b/web/modules/custom/music_search/modules/spotify_lookup/spotify_lookup.info.yml
@@ -5,3 +5,4 @@ core_version_requirement: ^9 || ^10
 package: Custom
 dependencies:
   - drupal:system (>= 9.1)
+configure: spotify_lookup.configuration
