--- a/web/modules/custom/music_search/music_search.routing.yml
+++ b/web/modules/custom/music_search/music_search.routing.yml
@@ -1,5 +1,5 @@
 music_search.search_form:
-  path: '/music_search/search'
+  path: '/music_search/search/{type}'
   defaults:
     _title: 'Testing Search'
     _form: '\Drupal\music_search\Form\MusicSearchForm'
