--- a/web/modules/custom/music_search/music_search.routing.yml
+++ b/web/modules/custom/music_search/music_search.routing.yml
@@ -1,8 +1,9 @@
 music_search.search_form:
-  path: '/music_search/search/{type}'
+  path: '/music_search/search/{autocomplete_type}'
   defaults:
     _title: 'Testing Search'
     _form: '\Drupal\music_search\Form\MusicSearchForm'
+    autocomplete_type: 'track'
   requirements:
     _permission: 'access content'
 
