--- a/web/modules/custom/music_search/music_search.routing.yml
+++ b/web/modules/custom/music_search/music_search.routing.yml
@@ -1,7 +1,7 @@
 music_search.search_form:
   path: '/music_search/search/{autocomplete_type}'
   defaults:
-    _title: 'Testing Search'
+    _title: 'Search'
     _form: '\Drupal\music_search\Form\MusicSearchForm'
     autocomplete_type: 'track'
   requirements:
