--- a/web/modules/custom/music_search/music_search.services.yml
+++ b/web/modules/custom/music_search/music_search.services.yml
@@ -1,4 +1,4 @@
 services:
   music_search:
     class: Drupal\music_search\MusicSearchService
-    arguments: ['@spotify_lookup', '@discogs_lookup']
+    arguments: ['@spotify_lookup']
