discogs search ready

--- a/web/modules/custom/music_search/modules/discogs_lookup/discogs_lookup.services.yml
+++ b/web/modules/custom/music_search/modules/discogs_lookup/discogs_lookup.services.yml
@@ -1,4 +1,4 @@
 services:
   discogs_lookup:
-    class: Drupal\discogs_lookup\DiscogsLookupService.php
+    class: Drupal\discogs_lookup\DiscogsLookupService
     arguments: ["@config.factory"]
