--- a/sync/core.entity_form_display.node.ad.default.yml
+++ b/sync/core.entity_form_display.node.ad.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.node.ad.field_link
     - node.type.ad
   module:
-    - content_moderation
     - link
     - media_library
     - path
@@ -45,11 +44,13 @@ content:
     type: link_default
     region: content
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 124
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 30
