--- a/sync/core.entity_view_display.node.artist.default.yml
+++ b/sync/core.entity_view_display.node.artist.default.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.node.artist.field_birth_date
     - field.field.node.artist.field_death_date
     - field.field.node.artist.field_description
+    - field.field.node.artist.field_discogs_id
     - field.field.node.artist.field_images_media
     - field.field.node.artist.field_mus
+    - field.field.node.artist.field_spotify_id
     - field.field.node.artist.field_website
     - field.field.node.artist.layout_builder__layout
     - node.type.artist
@@ -171,6 +173,38 @@ third_party_settings:
               id: 'extra_field_block:node:artist:links'
             additional: {  }
             weight: 7
+          376172a8-9476-41d3-870f-5e7ee43a5c01:
+            uuid: 376172a8-9476-41d3-870f-5e7ee43a5c01
+            region: first
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:artist:field_discogs_id'
+              formatter:
+                label: above
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+            additional: {  }
+            weight: 10
+          d3a48c41-4cb3-4e77-b610-9a948a0a51f2:
+            uuid: d3a48c41-4cb3-4e77-b610-9a948a0a51f2
+            region: first
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:artist:field_spotify_id'
+              formatter:
+                label: above
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+                type: string
+            additional: {  }
+            weight: 11
         third_party_settings: {  }
       -
         layout_id: layout_onecol
@@ -221,6 +255,14 @@ content:
     third_party_settings: {  }
     type: basic_string
     region: content
+  field_discogs_id:
+    weight: 12
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: first
   field_images_media:
     label: above
     type: entity_reference_entity_view
@@ -237,6 +279,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: first
+  field_spotify_id:
+    weight: 13
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: first
   field_website:
     weight: 3
