--- a/sync/core.entity_view_display.node.artist.teaser.yml
+++ b/sync/core.entity_view_display.node.artist.teaser.yml
@@ -8,8 +8,10 @@ dependencies:
     - field.field.node.artist.field_birth_date
     - field.field.node.artist.field_death_date
     - field.field.node.artist.field_description
+    - field.field.node.artist.field_discogs_id
     - field.field.node.artist.field_images_media
     - field.field.node.artist.field_mus
+    - field.field.node.artist.field_spotify_id
     - field.field.node.artist.field_website
     - field.field.node.artist.layout_builder__layout
     - image.style.teaser_artist_
@@ -79,5 +81,7 @@ content:
 hidden:
   content_moderation_control: true
   field_description: true
+  field_discogs_id: true
   field_mus: true
+  field_spotify_id: true
   layout_builder__layout: true
