--- a/web/modules/custom/music_search/music_search.info.yml
+++ b/web/modules/custom/music_search/music_search.info.yml
@@ -7,4 +7,5 @@ dependencies:
   - drupal:system (>= 9.1)
   - spotify_lookup
   - discogs_lookup
+  - duration_field
 configure: music_search.settings
