Song autofill virkar og contact site administrator villa löguð

--- a/web/modules/custom/music_search/music_search.services.yml
+++ b/web/modules/custom/music_search/music_search.services.yml
@@ -4,4 +4,4 @@ services:
     arguments: ["@spotify_lookup", "@discogs_lookup"]
   node_autocreation:
     class: Drupal\music_search\NodeAutocreationService
-    arguments: ["@music_search"];
+    arguments: ["@music_search", "@duration_field.service"];
